--- a/index.html
+++ b/index.html
@@ -2,33 +2,34 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="/css/cards.css" rel="stylesheet"/>
+        <link href="css/cards.css" rel="stylesheet"/>
+        <script async="" src="js/background.js"></script>
+        <script async="" src="js/click.js"></script>
     </head>
     <body>
         <div class="table">
-            <div class="card">0</div>
-            <div class="card">1</div>
-            <div class="card">2</div>
-            <div class="card">3</div>
-            <div class="card">4</div>
-            <div class="card">5</div>
-            <div class="card">6</div>
-            <div class="card">7</div>
-            <div class="card">8</div>
-            <div class="card">9</div>
-            <div class="card">10</div>
-            <div class="card"></div>
-            <div class="card">&bull;</div>
-            <div class="card">&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;&bull;&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;&bull;&bull;&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;</div>
-            <div class="card">&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;</div>
+            <a class="card line1" onclick="clickCard(this)" value="0"><span class="content">0</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="1"><span class="content">1</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="2"><span class="content">2</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="3"><span class="content">3</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="4"><span class="content">4</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="5"><span class="content">5</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="6"><span class="content">6</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="7"><span class="content">7</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="8"><span class="content">8</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="9"><span class="content">9</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="10"><span class="content">10</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="0"><span class="content">&nbsp;</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="1"><span class="content">&bull;</span></a>
+            <a class="card line1" onclick="clickCard(this)" value="2"><span class="content">&bull;&bull;</span></a>
+            <a class="card line2" onclick="clickCard(this)" value="3"><span class="content">&bull;&bull;<br/>&bull;</span></a>
+            <a class="card line2" onclick="clickCard(this)" value="4"><span class="content">&bull;&bull;<br/>&bull;&bull;</span></a>
+            <a class="card line2" onclick="clickCard(this)" value="5"><span class="content">&bull;&bull;<br/>&bull;&bull;&bull;</span></a>
+            <a class="card line2" onclick="clickCard(this)" value="6"><span class="content">&bull;&bull;&bull;<br/>&bull;&bull;&bull;</span></a>
+            <a class="card line3" onclick="clickCard(this)" value="7"><span class="content">&bull;&bull;&bull;<br/>&bull;&bull;<br/>&bull;&bull;</span></a>
+            <a class="card line3" onclick="clickCard(this)" value="8"><span class="content">&bull;&bull;<br/>&bull;&bull;&bull;<br/>&bull;&bull;&bull;</span></a>
+            <a class="card line3" onclick="clickCard(this)" value="9"><span class="content">&bull;&bull;&bull;<br/>&bull;&bull;&bull;<br/>&bull;&bull;&bull;</span></a>
+            <a class="card line3" onclick="clickCard(this)" value="10"><span class="content">&bull;&bull;&bull;<br/>&bull;&bull;&bull;<br/>&bull;&bull;&bull;&bull;</span></a>
         </div>
     </body>
 </html>
-  
