--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <link href="css/cards.css" rel="stylesheet"/>
         <script async="" src="js/background.js"></script>
         <script async="" src="js/click.js"></script>
+        <script async="" src="js/common.js"></script>
     </head>
     <body>
-        <div class="table">
+        <div class="table" id="table">
             <a class="card line1" onclick="clickCard(this)" value="0"><span class="content">0</span></a>
             <a class="card line1" onclick="clickCard(this)" value="1"><span class="content">1</span></a>
             <a class="card line1" onclick="clickCard(this)" value="2"><span class="content">2</span></a>
