add turn aroundanimations

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script async="" src="js/click.js"></script>
         <script async="" src="js/common.js"></script>
     </head>
-    <body>
+    <body class="preload">
         <div class="table" id="table">
             <a class="card line1" onclick="clickCard(this)" value="0"><span class="content">0</span></a>
             <a class="card line1" onclick="clickCard(this)" value="1"><span class="content">1</span></a>
