can play game from menu

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <script async="" src="js/table.js"></script>
         <script async="" src="js/settings.js"></script>
     </head>
-    <body class="" onload="">
+    <body>
         <div class="table" id="table">
         </div>
-        <div class="menu box">
+        <div class="menu box" id="menu">
             <div id="dealerContainer" class="row content">
             </div>
             <div id="settings" class="row footer">
