--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script async="" src="js/card.js"></script>
         <script async="" src="js/table.js"></script>
         <script async="" src="js/settings.js"></script>
+        <script async="" src="js/confetti/confetti.min.js"></script>
     </head>
     <body>
         <div class="table" id="table">
