--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <script async="" src="js/states/different-cards.js"></script>
         <script async="" src="js/states/one-card.js"></script>
         <script async="" src="js/dealer.js"></script>
+        <script async="" src="js/dealers/dots-and-numbers.js"></script>
+        <script async="" src="js/dealers/alphabet.js"></script>
         <script async="" src="js/preload.js"></script>
         <script async="" src="js/card.js"></script>
         <script async="" src="js/table.js"></script>
