--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script async="" src="js/dealer.js"></script>
         <script async="" src="js/dealers/dots-and-numbers.js"></script>
         <script async="" src="js/dealers/alphabet.js"></script>
+        <script async="" src="js/dealers/plus.js"></script>
         <script async="" src="js/preload.js"></script>
         <script async="" src="js/card.js"></script>
         <script async="" src="js/table.js"></script>
