add pairing strategies
fixes https://github.com/niccokunzmann/memory.quelltext.eu/issues/19

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script async="" src="js/preload.js"></script>
         <script async="" src="js/card.js"></script>
         <script async="" src="js/table.js"></script>
+        <script async="" src="js/pairing.js"></script>
         <script async="" src="js/settings.js"></script>
         <script async="" src="js/confetti/confetti.js"></script>
     </head>
