Add game of minus with fruit in it.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <script async="" src="js/dealer.js"></script>
         <script async="" src="js/dealers/dots-and-numbers.js"></script>
         <script async="" src="js/dealers/alphabet.js"></script>
+        <script async="" src="js/dealers/math.js"></script>
+        <script async="" src="js/dealers/minus.js"></script>
         <script async="" src="js/dealers/plus.js"></script>
         <script async="" src="js/preload.js"></script>
         <script async="" src="js/card.js"></script>
