make about page readable

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </div>
             <div id="dealerContainer" class="row content">
             </div>
+            <div id="footer" class="row">
+              <a href="about.html">About the App</a>
+            </div>
         </div>
     </body>
 </html>
