add compatibility funtions

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8"/>
@@ -5,6 +6,7 @@
         <link href="css/cards.css" rel="stylesheet"/>
         <link href="css/settings.css" rel="stylesheet"/>
         <!-- for file in `find js | grep -e '\.js$'`; do echo "        <script async=\"\" src=\"$file\"></script>"; done -->
+        <script async="" src="js/compatibility.js"></script>
         <script async="" src="js/background.js"></script>
         <script async="" src="js/common.js"></script>
         <script async="" src="js/game.js"></script>
