add link to zip and f-droid

--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <body>
         <h1>About this Game</h1>
         <p>
+          You can <a href="https://github.com/niccokunzmann/memory.quelltext.eu/archive/refs/heads/master.zip">download the game as zip file</a> or <a href="https://f-droid.org/app/eu.quelltext.memory">download the Android app from F-Droid</a>.
+        </p>
+        <p>
           This is an open-source game developed by <a href="https://niccokunzmann.github.io">Nicco Kunzmann</a>.
           You can <a href="https://github.com/niccokunzmann/memory.quelltext.eu">view the source code</a> and <a href="https://github.com/niccokunzmann/app.memory.quelltext.eu">the soure code of the app</a>.
           You are welcome to contribute and <a href="https://github.com/niccokunzmann/memory.quelltext.eu/issues">let us know if something is broken or you like to add new features</a>.
