Added Favicon, styling in about page, and background change when game ends

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io_web/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io_web/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io_web/favicon-16x16.png">
+        <link rel="manifest" href="./favicon_io_web/site.webmanifest">
         <link href="css/cards.css" rel="stylesheet"/>
         <link href="css/settings.css" rel="stylesheet"/>
         <!-- for file in `find js | grep -e '\.js$'`; do echo "        <script async=\"\" src=\"$file\"></script>"; done -->
